--- a/website/src/css/styles.css
+++ b/website/src/css/styles.css
@@ -349,7 +349,7 @@ select {
 	-ms-appearance: none;
     -o-appearance: none;
     appearance: none;
-    background-image: url('../images/down-arrow.png');
+    /* background-image: url('../images/down-arrow.png'); */
     background-position: 96% 50%;
     background-repeat: no-repeat;
     outline: none;
@@ -1397,7 +1397,7 @@ input[type='checkbox'] {
 .form {
 	padding-top: 6.25rem;
 	padding-bottom: 5.625rem;
-	background: url('../images/contact-background.jpg') center bottom no-repeat;
+	/* background: url('../images/contact-background.jpg') center bottom no-repeat; */
 	background-size: cover;
 }
 
